RESOLVED FIXED 58383
Fix bug with adding wrong context to LayerRendererChromium and get rid of RefPtr loop.
https://bugs.webkit.org/show_bug.cgi?id=58383
Summary Fix bug with adding wrong context to LayerRendererChromium and get rid of Ref...
John Bates
Reported 2011-04-12 15:41:40 PDT
workaround possible HashMap RefPtr key bug
Attachments
Patch (4.07 KB, patch)
2011-04-12 15:42 PDT, John Bates
no flags
Patch (8.00 KB, patch)
2011-04-13 09:26 PDT, John Bates
no flags
Patch (5.98 KB, patch)
2011-04-13 13:48 PDT, John Bates
no flags
John Bates
Comment 1 2011-04-12 15:42:36 PDT
Kenneth Russell
Comment 2 2011-04-12 17:17:58 PDT
Comment on attachment 89284 [details] Patch Per our offline discussion and analysis this doesn't work.
John Bates
Comment 3 2011-04-13 09:26:43 PDT
John Bates
Comment 4 2011-04-13 09:38:14 PDT
Comment on attachment 89388 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89388&action=review > Source/WebCore/platform/graphics/chromium/WebGLLayerChromium.cpp:-100 > - layerRenderer()->addChildContext(m_context); This appears to be the bug that caused the map to be empty.
WebKit Review Bot
Comment 5 2011-04-13 09:42:45 PDT
Kenneth Russell
Comment 6 2011-04-13 11:07:43 PDT
Comment on attachment 89388 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89388&action=review Looks good overall. Did you test this both with and without the GL_CHROMIUM_latch extension exposed from the command buffer service code, and do page reloads, verifying that the assertion failure is fixed when the extension isn't present, and that there is no memory leak (in either the renderer or GPU process) when it is? r- just because the ChangeLogs need the synopsis updated. I recommend rerunning prepare-ChangeLog. > Source/WebCore/ChangeLog:5 > + workaround possible HashMap RefPtr key bug Please update this synopsis. > Source/WebKit/chromium/ChangeLog:5 > + workaround possible HashMap RefPtr key bug Please update synopsis.
Kenneth Russell
Comment 7 2011-04-13 11:17:10 PDT
Also, the build failure on Chromium-Linux is occurring because you need to roll the chromium_rev in Source/WebKit/chromium/DEPS forward to a revision containing your implementation of the newly pure virtual methods in WebGraphicsContext3D.h. You should make that change and do the DEPS roll in a separate bug. They're unrelated to this bug fix.
John Bates
Comment 8 2011-04-13 13:48:54 PDT
Kenneth Russell
Comment 9 2011-04-13 13:53:58 PDT
Comment on attachment 89448 [details] Patch This looks great. Thanks for the quick fix.
WebKit Commit Bot
Comment 10 2011-04-14 02:24:20 PDT
The commit-queue encountered the following flaky tests while processing attachment 89448 [details]: http/tests/xmlhttprequest/basic-auth.html bug 51613 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 11 2011-04-14 02:28:53 PDT
Comment on attachment 89448 [details] Patch Clearing flags on attachment: 89448 Committed r83828: <http://trac.webkit.org/changeset/83828>
WebKit Commit Bot
Comment 12 2011-04-14 02:29:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.