2011-04-14  John Bates  <jbates@google.com>

Reviewed by Kenneth Russell.

        Fix bug with adding wrong context to LayerRendererChromium and get rid of RefPtr loop.
        https://bugs.webkit.org/show_bug.cgi?id=58383

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::addChildContext):
        (WebCore::LayerRendererChromium::removeChildContext):
        * platform/graphics/chromium/LayerRendererChromium.h:

Canonical link: https://commits.webkit.org/73585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83828 268f45cc-cd09-0410-ab3c-d52691b4dbfc